update slider implementation to fix gap

--- a/app/assets/stylesheets/styles.scss
+++ b/app/assets/stylesheets/styles.scss
@@ -972,12 +972,6 @@ footer.footer {
 
 
 /*==============collection_image==========*/
-.home-thumb {
-  width:665px;
-  height:530px;
-}                                                                                                                                             .image {
-  margin-left:-4px;
-}           
 
 @media only screen and (min-width: 1919px) {
   .image {
